fix(blog): content overflow and subnav container

--- a/src/pages/blog-page/components/blog-post/blog-post.scss
+++ b/src/pages/blog-page/components/blog-post/blog-post.scss
@@ -4,6 +4,7 @@
   --p3-color: var(--c-indigo-100);
 
   display: block;
+  overflow: hidden;
 
   .post {
     h1 {
